# grader

./: .env  .gitignore  README.md  alembic.ini  docker-compose.yml  docker.logs  pyproject.toml
alembic/: env.py
alembic/versions/: 0b4c6f2492f6_initial_migration.py
app/: __init__.py  main.py
app/endpoints/: grading.py  upload.py
app/endpoints/crud/: schemas.py
app/endpoints/middleware/: schemas.py  session.py
app/static/: error.css  form.css  nav.css  style.css
app/templates/: error.html  form.html  homepage.html  login.html  navbar.html
app/templates/grade/: available.html  center.html  form.html  test_result.html
app/utils/: organizer.py
file_storage/: .gitignore
fullstack/: Dockerfile  pyproject.toml
fullstack/app/: .eslintrc  .prettierrc  __init__.py  database.py  main.py  models.py
fullstack/app/endpoints/: grading.py  upload.py
fullstack/app/endpoints/crud/: crud.py  schemas.py
fullstack/app/endpoints/middleware/: session.py
fullstack/app/static/: available.css  center.css  form.css  homepage.css  login.css  style.css  test_result.css
fullstack/app/templates/: available.html  center.html  error.html  form.html  gradingWindow.html  homepage.html  login.html  navbar.html  test_result.html
fullstack/app/utils/: organizer.py  parser.py  testrunner.py
