[project]
name = "Drexel_Grader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "ansi2html>=1.9.2",
    "cachetools>=5.5.0",
    "databases>=0.9.0",
    "fastapi-sessions>=0.3.2",
    "fastapi[all,standard]>=0.115.0",
    "numpy>=2.1.2",
    "pygments>=2.18.0",
    "sqlalchemy>=2.0.35",
    "sqlite-utils>=3.37",
    "starlette[all]>=0.39.2",
]


[tool.pylsp.plugins]
jedi_completion = { enabled = true }
jedi_hover = { enabled = true }
jedi_references = { enabled = true }
jedi_signature_help = { enabled = true }
jedi_symbols = { enabled = true, all_scopes = true }

pycodestyle = { enabled = false }

[tool.pylsp.plugins.flake8]
enabled = false
ignore = []
maxLineLength = 160

mypy = { enabled = false }
isort = { enabled = false }
yapf = { enabled = false }
pylint = { enabled = false }
pydocstyle = { enabled = false }
mccabe = { enabled = false }
preload = { enabled = false }
rope_completion = { enabled = true }

[tool.venv]
path = "../.venv"
